V3.0.4/TransferAlerts/nohup.out
  File "transfer_alerts.py", line 513
    os_name = "unknown"
                      ^
IndentationError: unindent does not match any outer indentation level
